# eye_detection

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/opencv/: CMakeLists.txt  idf_component.yml
components/opencv/examples/features2d/: CMakeLists.txt
components/opencv/examples/features2d/main/: CMakeLists.txt  cv_opencv_features2d.cpp
components/opencv/examples/motion_detection/: CMakeLists.txt
components/opencv/examples/motion_detection/main/: CMakeLists.txt
components/opencv/examples/object_tracking/: CMakeLists.txt
components/opencv/examples/object_tracking/main/: CMakeLists.txt
components/opencv/examples/people_detection/: CMakeLists.txt
components/opencv/examples/people_detection/main/: CMakeLists.txt
components/opencv/examples/text_area_detection/: CMakeLists.txt
components/opencv/examples/text_area_detection/main/: CMakeLists.txt  idf_component.yml
components/opencv/opencv/modules/objdetect/include/opencv2/objdetect/: face.hpp
main/: CMakeLists.txt  app_camera.c  dms_spi_api.c  dms_timer_api.c  esp32S3_knet_demo.cpp  wifi_connection1.c
main/face_detection/: facedetectcnn-model.cpp  facedetectcnn.h  facedetection_export.h
main/include/: app_camera.h  board_def.h  utils.h
